# Student_Task

./: README.md  pyproject.toml
Task1/: main.py
Task2/: main.py
studenttask/: pyproject.toml
studenttask/tests/: test_studenttask.py
