[tool.poetry]
name = "StudentTask"
version = "0.1.0"
description = "Data Challenge"
authors = ["Takehiro Tsurumi <cranelook87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
